--- a/src/prestamos/FrmAgregarAlumno.form
+++ b/src/prestamos/FrmAgregarAlumno.form
@@ -88,8 +88,14 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtNombres">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtNombresKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="txtApellidos">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtApellidosKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel3">
       <Properties>
@@ -97,6 +103,9 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="txtCarnet">
+      <Events>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="txtCarnetKeyTyped"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
